# HYDRODSHOT_2.0

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SAUVC_T1_T8 Debug.launch  SAUVC_T1_T8.ioc  STM32F407XX_FLASH.ld
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: 10Dshot.language.settings.xml  PINS.elf.1772891364007.pdom  PINS.elf.language.settings.xml  SAUVC_T1_T8.elf.1772739558843.pdom  SAUVC_T1_T8.elf.language.settings.xml  Test1.elf.1773478152728.pdom  Test1.elf.language.settings.xml  Test1.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap  7.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/10Dshot/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/10Dshot/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/PINS.elf/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/PINS.elf/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/SAUVC_T1_T8.elf/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/SAUVC_T1_T8.elf/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Test1.elf/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Test1.elf/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: .markers  .markers.snap  1.tree  7.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: PINS.elf.launch  SAUVC_T1_T8.elf.launch  Test1.elf.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2026/3/10/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2026/3/11/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2026/4/16/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2026/4/17/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Core/: CMakeLists.txt
Core/Hw/: CMakeLists.txt
Core/Hw/Inc/: stm32f4xx_it.h
Core/Hw/Src/: adc.c  dma.c  gpio.c  stm32f4xx_it.c  tim.c
Core/Inc/: byteProtocol.h  byteProtocol.hpp  byteProtocol_tx.h  dshot.h  dshot_A.h  main.h  pwm.h  status_tx.h  stm32f4xx_it.h  tim.h  uart_1_cmd.h  uart_cmd.h
Core/Src/: adc.c  byteProtocol.c  byteProtocol_tx.c  dma.c  dshot.c  dshot_A.c  gpio.c  hydrolib_ring_queue.c  main.c  main.cpp  pwm.c  status_tx.c  stm32f4xx_it.c  tim.c  uart_1_cmd.c  uart_cmd.c  usart.c
Core/myCode/: hydrolib_bus_application_master.hpp  hydrolib_bus_application_slave.hpp  hydrolib_bus_datalink_deserializer.hpp  hydrolib_bus_datalink_stream.hpp  hydrolib_fixed_point.hpp  hydrolib_log.hpp  hydrolib_log_macro.hpp  hydrv_uart_low.hpp
Debug/: SAUVC_T1_T8.elf  SAUVC_T1_T8.hex  SAUVC_T1_T8.list  SAUVC_T1_T8.map  makefile  objects.list
Debug/Core/Src/: adc.cyclo  adc.su  byteProtocol.cyclo  byteProtocol.d  byteProtocol.su  byteProtocol_tx.cyclo  byteProtocol_tx.d  byteProtocol_tx.su  dma.cyclo  dshot.cyclo  dshot.d  dshot.su  dshot_A.cyclo  dshot_A.d  dshot_A.su  hydrolib_ring_queue.cyclo  hydrolib_ring_queue.d  hydrolib_ring_queue.su  main.cyclo  main.d  main.su  pwm.cyclo  pwm.d  pwm.su  status_tx.cyclo  status_tx.d  status_tx.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  tim.cyclo  tim.su  uart_1_cmd.cyclo  uart_1_cmd.d  uart_1_cmd.su  uart_cmd.cyclo  uart_cmd.d  uart_cmd.su
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Drivers/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
SAUVC_T1_T8.elf/: .cproject  .project
Test1.elf/: .project
cmake/stm32cubemx/: CMakeLists.txt
